syntax = "proto3";

package pb;

import "barber/barber_roles.proto";

option go_package = "barbershop/src/pb/barber";


message CreateBarberRolesRequest{
    string barber_id = 1;
    string barbershop_id = 2;
    int32 role_id = 3;
}

message CreateBarberRolesResponse {
    BarberRoles barber_role = 1;
}